# Nova_engine_v2

./: BUILD_SUCCESS.md  CMakeLists.txt  LICENSE  NOVAENGINE_FIXES.md  README.txt
include/: chunk_dispatcher.hpp  decode_and_display.hpp  erasure_coder.hpp  ffmpeg_encoder.h  loss_tracker.hpp  packet_parser.hpp  ping_handler.hpp  ping_sender.hpp  receiver.hpp  rtt_monitor.hpp  scheduler.hpp  sender_receiver.hpp  slicer.hpp  smart_collector.hpp  udp_sender.hpp
src/: chunk_dispatcher.cpp  decode_and_display.cpp  erasure_coder.cpp  ffmpeg_encoder.cpp  loss_tracker.cpp  main.cpp  packet_parser.cpp  ping_handler.cpp  ping_sender.cpp  receiver.cpp  rtt_monitor.cpp  scheduler.cpp  sender_receiver.cpp  slicer.cpp  smart_collector.cpp  udp_sender.cpp
